--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@shopify/restyle": "^2.4.2",
+    "axios": "^1.6.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-hook-form": "^7.47.0",
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "13.9.0",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.5",
     "typescript": "^5.1.3"
   },
   "private": true
