--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@shopify/restyle": "^2.4.2",
     "axios": "^1.6.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.15",
     "expo-linear-gradient": "~12.3.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "nanoid": "^5.0.2",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
+    "react-native-calendars": "^1.1302.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "13.9.0",
